# todos

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md
.claude/agents/: architect.md  build-error-resolver.md  code-reviewer.md  doc-updater.md  orchestrator.md  planner.md  refactor-cleaner.md  security-reviewer.md  tech-docs-searcher.md
.claude/commands/: build-fix.md  checkpoint.md  code-review.md  e2e.md  eval.md  evolve.md  instinct-export.md  instinct-import.md  instinct-status.md  learn.md  orchestrate.md  plan.md  refactor-clean.md  sessions.md  setup-pm.md  skill-create.md  tdd.md  test-coverage.md  update-codemaps.md  update-docs.md  verify.md
.claude/rules/: coding-style.md  dev-workflow.md  patterns.md  proactive-subagents-skills.md  security.md
.github/: renovate.json
.github/workflows/: ci.yml
.serena/: project.yml
.todos/: archive.json  tasks.json  todos.db
docs/design/: architecture.md
docs/tasks/: 01-project-setup.md  02-init.md  03-add-show.md  04-list.md  05-edit.md  06-status.md  07-delete.md  08-search-stats.md  09-config.md  10-batch.md  11-tui-foundation.md  12-tui-list-detail.md  13-tui-form-actions.md  14-i18n-polish.md  overview.md
rules/: dev-workflow.md
src/: error.rs  lib.rs  main.rs
src/cli/: add.rs  archive.rs  batch.rs  config.rs  delete.rs  edit.rs  init.rs  list.rs  mod.rs  output.rs  show.rs  (+2 more)
tests/: e2e_01_setup.rs  e2e_02_init.rs  e2e_03_add_show.rs  e2e_04_list.rs  e2e_05_edit.rs  e2e_06_status.rs  e2e_07_delete.rs  e2e_08_search_stats.rs  e2e_09_config.rs  e2e_10_batch.rs  e2e_14_i18n.rs  tui_tests.rs
(+41 files in other folders)
