[package]
name = "todos"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.29"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
dirs = "5"
fs2 = "0.4"
itertools = "0.13"
unicode-width = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
